--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "@shopify/flash-list": "1.6.4",
+    "expo-dev-client": "~4.0.19",
+    "expo-image": "~1.12.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
